adding upload ticket

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,9 @@
 </head>
 <body>
     <form action="/cuit" method="POST">
-        <input type="text" id="cuit" name="cuit">
+        <p>Insert Cuit</p>
+        <input type="text" id="cuit" name="cuit" placeholder="CUIT"><br>
+        <input type="file" name="userFile" /><br>
         <input type="submit" value="Send Ticket" onclick="">
     </form>
 </body>
